feat: доработал работу с контрактом стратегии, теперь истиной является openapi схема, поля которой используются в промпте(не весь контракт передается, а только нужные поля)